unpackaged/main/default/objects/pse__Experience__c/pse__Experience__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ExperienceHelp</customHelpPage>
    <description>Stores details of a resource's experience.</description>
    <label>Experience</label>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>