unpackaged/main/default/objects/pse__Experience__c/fields/pse__Description__c.field-meta.xml
<CustomField>
    <fullName>pse__Description__c</fullName>
    <description>Gives further information about the experience.</description>
    <inlineHelpText>Gives further information about the experience.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>