unpackaged/main/default/objects/pse__Experience__c/fields/pse__Project_Task_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Task_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related project task assignment for the experience.</description>
    <inlineHelpText>Lookup to the related project task assignment for the experience.</inlineHelpText>
    <label>Project Task Assignment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Project_Task_Assignment__c.pse__Assignment__r.pse__Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Project_Task_Assignment__c</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>