unpackaged/main/default/objects/pse__Experience__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the related resource.</description>
    <inlineHelpText>Lookup to the related resource.</inlineHelpText>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Is_Resource__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>