unpackaged/main/default/objects/pse__Experience__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <description>Date the experience started.</description>
    <formula>IF(NOT(ISBLANK(pse__Project_Task_Assignment__c)),pse__Project_Task_Assignment__r.pse__Project_Task_Start_Date__c,IF(NOT(ISBLANK(pse__Assignment__c)),pse__Assignment__r.pse__Start_Date__c,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date the experience started.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>