unpackaged/main/default/objects/pse__Experience__c/validationRules/pse__Experience_May_Not_Have_Multiple_Targets.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Experience_May_Not_Have_Multiple_Targets</fullName>
    <active>true</active>
    <description>The user must select either an assignment or a project task assignment but not both.</description>
    <errorConditionFormula>IF(ISBLANK(pse__Assignment__c),0,1) +
IF(ISBLANK(pse__Project_Task_Assignment__c),0,1) &gt; 1</errorConditionFormula>
    <errorMessage>You must select either an assignment or a project task assignment but not both.</errorMessage>
</ValidationRule>