unpackaged/main/default/objects/pse__Experience__c/validationRules/pse__Experience_Must_Have_At_Least_One_Target.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Experience_Must_Have_At_Least_One_Target</fullName>
    <active>true</active>
    <description>The user must select an assignment or a project task assignment.</description>
    <errorConditionFormula>IF(ISBLANK(pse__Assignment__c),0,1) +
IF(ISBLANK(pse__Project_Task_Assignment__c),0,1) = 0</errorConditionFormula>
    <errorMessage>You must select an assignment or a project task assignment.</errorMessage>
</ValidationRule>